testsuite/tests/typing-modules-bugs/pr9695_bad.compilers.reference
File "pr9695_bad.ml", line 8, characters 11-12:
8 |   let open A in
               ^
Error: The module "A" is an alias for module "MissingModule", which is missing
